--- a/TestUseGithub/Views/Home/Index.cshtml
+++ b/TestUseGithub/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page testes";
+    ViewData["Title"] = "Home Page testes 2";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
